# raylib-cpp

./: .gitignore  CMakeLists.txt  Doxyfile.bak  ECS.md  README.md  main.cpp  metadata.json  minge.cpp  readme.md  roadmap.md
.github/workflows/: ci.yml
engine/: AssetWatcher.cpp  AudioManager.cpp  ConfigManager.cpp  Core.cpp  InputManager.cpp  Logger.cpp  ResourceManager.cpp
engine/assets/: AssetPipeline.cpp  ImageAssetProcessor.cpp  SoundAssetProcessor.cpp
engine/collision/: collision_system.cpp  collision_system.hpp
engine/ecs/: ECSWorld.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EventBus.cpp  SystemManager.cpp
engine/input/: input.cpp
engine/render/: window.hpp
engine/scene/: SceneManager.cpp
engine/utils/: Utils.hpp
game/: main.cpp
game/components/: Position.hpp  Velocity.hpp
game/core/: game_object.hpp  game_state.cpp  gameplay_logic.hpp
game/entities/: buff_component.hpp  component.hpp  npc.cpp
game/scenes/: GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  OptionsScene.cpp  OptionsScene.hpp  PauseScene.cpp  PauseScene.hpp
game/systems/: LoggerSystem.cpp  LoggerSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  TestEmitterSystem.cpp  TestEmitterSystem.hpp
game/ui/: hud.hpp
game/world/: map.cpp  world.hpp
include/: AssetWatcher.hpp  AudioManager.hpp  ConfigManager.hpp  Core.hpp  InputManager.hpp  Logger.hpp  Profiler.hpp  ResourceManager.hpp
include/assets/: AssetPipeline.hpp  IAssetProcessor.hpp  ImageAssetProcessor.hpp  SoundAssetProcessor.hpp
include/ecs/: ComponentManager.hpp  ComponentManager.tpp  ComponentStorage.hpp  ECSRegistry.hpp  ECSWorld.hpp  ECSWorld_serialization.cpp  EntityManager.hpp  EventBus.hpp  System.hpp  SystemManager.hpp  SystemPhase.hpp
include/ecs/events/: TestEvent.hpp
include/scene/: BaseScene.hpp  IScene.hpp  SceneManager.hpp
joc_cu_minge/: ball.cpp  ball.hpp  build.bat  checkpoint.cpp  checkpoint.hpp  collision_system.cpp  collision_system.hpp  game_object.hpp  game_state.cpp  game_state.hpp  gameplay_logic.cpp  gameplay_logic.hpp  hud.cpp  hud.hpp  input.cpp  input.hpp  level.cpp  level.hpp  main.cpp  obstacle.cpp  obstacle.hpp
scripts/: build.bat
src/: main.cpp
src/core/: game_state.cpp  game_state.hpp  gameplay_logic.cpp  gameplay_logic.hpp
src/engine/: input.cpp  input.hpp
src/entities/: ball.cpp  ball.hpp  checkpoint.cpp  checkpoint.hpp  entity.cpp  entity.hpp  npc.cpp  npc.hpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp
src/levels/: level.cpp  level.hpp
src/systems/: collider.hpp  collision_system.cpp  collision_system.hpp
src/ui/: hud.cpp
src/world/: map.cpp  map.hpp  tile.hpp
tests/: CMakeLists.txt  test_AssetPipeline.cpp  test_AssetPipeline_Fallback.cpp  test_AssetWatcher.cpp  test_AudioManager.cpp  test_ConfigManager.cpp  test_Profiler.cpp  test_ResourceManager.cpp  test_ResourceManager_Reload.cpp
tests/ecs/: test_ComponentManager.cpp  test_ECSWorld_Serialization.cpp  test_EntityManager.cpp  test_EventBus.cpp
tests/scene/: test_IScene.cpp  test_SceneManager.cpp
